--- a/HTML GUIDE.html
+++ b/HTML GUIDE.html
@@ -47,6 +47,7 @@
                 <li><a class = "nav-link scrollto" href="#OBFE">OBJECTS,iFRAME, EMBED</a></li>
                 <li><a class = "nav-link scrollto" href="#newtags">NEW TAGS</a></li>
                 <li><a class = "nav-link scrollto" href="#OTHERS">OTHERS</a></li>
+                <li><a class = "nav-link scrollto" href="#FLEXBOX">FLEXBOX</a></li>
 
             </ul>
         </div>
@@ -419,6 +420,17 @@ src=" " -The URL/path of the embedded item. -->
 <p style= "outline: none;" contenteditable>content editable no border</p>
 </div>
 </section> 
+
+<section id = "FLEXBOX">
+    <div class = "flexbox-container"> 
+        <!-- It is layout in a row 
+        -->
+      <div class = "flexbox-item flexbox-item-1">FLEXBOX 1</div>
+        <div class = "flexbox-item flexbox-item-2">FLEXBOX 2</div>
+        <div class = "flexbox-item flexbox-item-2">FLEXBOX 3</div>
+
+    </div>
+</section>
 
 </body>
 </html>
